--- a/electron/package.json
+++ b/electron/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^4.0.1",
+    "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
