Simplified build process

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cd electron && yarn electron:start",
     "dev": "nf start",
-    "electron:build": "cd electron && yarn build",
+    "electron:build": "cd electron && yarn --prod && yarn build",
     "java:wait": "nodemon java.dev.js -i electron/",
     "java:compile": "echo ok"
   },
